chore(deps): bump net.sourceforge.pmd:pmd-core in / (#5685)
* chore(deps): bump net.sourceforge.pmd:pmd-core in /

Bumps [net.sourceforge.pmd:pmd-core](https://github.com/pmd/pmd) in `/` from 7.24.0 to 7.25.0.


Updates `net.sourceforge.pmd:pmd-core` from 7.24.0 to 7.25.0
- [Release notes](https://github.com/pmd/pmd/releases)
- [Commits](https://github.com/pmd/pmd/compare/pmd_releases/7.24.0...pmd_releases/7.25.0)

Updates `net.sourceforge.pmd:pmd-core` from 7.24.0 to 7.25.0
- [Release notes](https://github.com/pmd/pmd/releases)
- [Commits](https://github.com/pmd/pmd/compare/pmd_releases/7.24.0...pmd_releases/7.25.0)

Updates `net.sourceforge.pmd:pmd-core` from 7.24.0 to 7.25.0
- [Release notes](https://github.com/pmd/pmd/releases)
- [Commits](https://github.com/pmd/pmd/compare/pmd_releases/7.24.0...pmd_releases/7.25.0)

Updates `net.sourceforge.pmd:pmd-core` from 7.24.0 to 7.25.0
- [Release notes](https://github.com/pmd/pmd/releases)
- [Commits](https://github.com/pmd/pmd/compare/pmd_releases/7.24.0...pmd_releases/7.25.0)

Updates `net.sourceforge.pmd:pmd-core` from 7.24.0 to 7.25.0
- [Release notes](https://github.com/pmd/pmd/releases)
- [Commits](https://github.com/pmd/pmd/compare/pmd_releases/7.24.0...pmd_releases/7.25.0)

Updates `net.sourceforge.pmd:pmd-core` from 7.24.0 to 7.25.0
- [Release notes](https://github.com/pmd/pmd/releases)
- [Commits](https://github.com/pmd/pmd/compare/pmd_releases/7.24.0...pmd_releases/7.25.0)

Updates `net.sourceforge.pmd:pmd-core` from 7.24.0 to 7.25.0
- [Release notes](https://github.com/pmd/pmd/releases)
- [Commits](https://github.com/pmd/pmd/compare/pmd_releases/7.24.0...pmd_releases/7.25.0)

Updates `net.sourceforge.pmd:pmd-core` from 7.24.0 to 7.25.0
- [Release notes](https://github.com/pmd/pmd/releases)
- [Commits](https://github.com/pmd/pmd/compare/pmd_releases/7.24.0...pmd_releases/7.25.0)

---
updated-dependencies:
- dependency-name: net.sourceforge.pmd:pmd-core
  dependency-version: 7.25.0
  dependency-type: direct:pro