@@ -17,9 +17,9 @@
 package org.geotools.ows.wms.request;
 
 import java.awt.Dimension;
-import java.io.UnsupportedEncodingException;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ListIterator;
 import java.util.Properties;
 import java.util.Stack;
@@ -70,17 +70,19 @@ public abstract class AbstractGetMapRequest extends AbstractWMSRequest implement
 
                 try {
                     // spaces are converted to plus signs, but must be %20 for url calls [GEOT-4317]
-                    layerString =
-                            layerString + URLEncoder.encode(layerName, "UTF-8").replaceAll("\\+", "%20");
-                } catch (UnsupportedEncodingException | NullPointerException e) {
+                    layerString = layerString
+                            + URLEncoder.encode(layerName, StandardCharsets.UTF_8)
+                                    .replaceAll("\\+", "%20");
+                } catch (NullPointerException e) {
                     layerString = layerString + layerName;
                 }
                 styleName = styleName == null ? "" : styleName;
                 try {
 
-                    styleString =
-                            styleString + URLEncoder.encode(styleName, "UTF-8").replaceAll("\\+", "%20");
-                } catch (UnsupportedEncodingException | NullPointerException e1) {
+                    styleString = styleString
+                            + URLEncoder.encode(styleName, StandardCharsets.UTF_8)
+                                    .replaceAll("\\+", "%20");
+                } catch (NullPointerException e1) {
                     styleString = styleString + styleName;
                 }
 
