@@ -18,7 +18,6 @@ package org.geotools.http;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
@@ -135,11 +134,7 @@ public class MockHttpClient extends AbstractHttpClient {
         }
 
         private static String decode(final String encoded) {
-            try {
-                return encoded == null ? null : URLDecoder.decode(encoded, "UTF-8");
-            } catch (final UnsupportedEncodingException e) {
-                throw new RuntimeException(e);
-            }
+            return encoded == null ? null : URLDecoder.decode(encoded, StandardCharsets.UTF_8);
         }
 
         public Request(URL url, byte[] postContent, String postContentType) {
