@@ -22,9 +22,9 @@ import java.awt.Graphics2D;
 import java.awt.RenderingHints.Key;
 import java.awt.geom.Rectangle2D;
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.AbstractMap.SimpleImmutableEntry;
 import java.util.Arrays;
 import java.util.Collections;
@@ -146,17 +146,12 @@ public class SVGGraphicFactory implements Factory, ExternalGraphicFactory, Graph
         final int idx = parameter.indexOf("=");
         final String key = idx > 0 ? parameter.substring(0, idx) : parameter;
 
-        try {
-            String value = null;
-            if (idx > 0 && parameter.length() > idx + 1) {
-                final String encodedValue = parameter.substring(idx + 1);
-                value = URLDecoder.decode(encodedValue, "UTF-8");
-            }
-            return new SimpleImmutableEntry<>(key, value);
-        } catch (UnsupportedEncodingException e) {
-            // UTF-8 not supported??
-            throw new RuntimeException(e);
+        String value = null;
+        if (idx > 0 && parameter.length() > idx + 1) {
+            final String encodedValue = parameter.substring(idx + 1);
+            value = URLDecoder.decode(encodedValue, StandardCharsets.UTF_8);
         }
+        return new SimpleImmutableEntry<>(key, value);
     }
 
     private boolean hasParameters(Element root) {
